lib/miniaudio/miniaudio.auto.c.v


// MA_API void ma_pcm_s32_to_u8(void* pOut, const void* pIn, ma_uint64 count, ma_dither_mode ditherMode);
fn C.ma_pcm_s32_to_u8(p_out voidptr, p_in voidptr, count u64, dither_mode C.ma_dither_mode)
[inline]
pub fn pcm_s32_to_u8(p_out voidptr, p_in voidptr, count u64, dither_mode C.ma_dither_mode) {
	C.ma_pcm_s32_to_u8(p_out, p_in, count, dither_mode)
}

// MA_API void ma_pcm_s32_to_s16(void* pOut, const void* pIn, ma_uint64 count, ma_dither_mode ditherMode);
fn C.ma_pcm_s32_to_s16(p_out voidptr, p_in voidptr, count u64, dither_mode C.ma_dither_mode)
[inline]
pub fn pcm_s32_to_s16(p_out voidptr, p_in voidptr, count u64, dither_mode C.ma_dither_mode) {
	C.ma_pcm_s32_to_s16(p_out, p_in, count, dither_mode)
}

// MA_API void ma_pcm_s32_to_s24(void* pOut, const void* pIn, ma_uint64 count, ma_dither_mode ditherMode);
fn C.ma_pcm_s32_to_s24(p_out voidptr, p_in voidptr, count u64, dither_mode C.ma_dither_mode)
[inline]
pub fn pcm_s32_to_s24(p_out voidptr, p_in voidptr, count u64, dither_mode C.ma_dither_mode) {
	C.ma_pcm_s32_to_s24(p_out, p_in, count, dither_mode)
}

// MA_API void ma_pcm_s32_to_f32(void* pOut, const void* pIn, ma_uint64 count, ma_dither_mode ditherMode);
fn C.ma_pcm_s32_to_f32(p_out voidptr, p_in voidptr, count u64, dither_mode C.ma_dither_mode)
[inline]
pub fn pcm_s32_to_f32(p_out voidptr, p_in voidptr, count u64, dither_mode C.ma_dither_mode) {
	C.ma_pcm_s32_to_f32(p_out, p_in, count, dither_mode)
}

// MA_API void ma_pcm_f32_to_u8(void* pOut, const void* pIn, ma_uint64 count, ma_dither_mode ditherMode);
fn C.ma_pcm_f32_to_u8(p_out voidptr, p_in voidptr, count u64, dither_mode C.ma_dither_mode)
[inline]
pub fn pcm_f32_to_u8(p_out voidptr, p_in voidptr, count u64, dither_mode C.ma_dither_mode) {
	C.ma_pcm_f32_to_u8(p_out, p_in, count, dither_mode)
}

// MA_API void ma_pcm_f32_to_s16(void* pOut, const void* pIn, ma_uint64 count, ma_dither_mode ditherMode);
fn C.ma_pcm_f32_to_s16(p_out voidptr, p_in voidptr, count u64, dither_mode C.ma_dither_mode)
[inline]
pub fn pcm_f32_to_s16(p_out voidptr, p_in voidptr, count u64, dither_mode C.ma_dither_mode) {
	C.ma_pcm_f32_to_s16(p_out, p_in, count, dither_mode)
}

// MA_API void ma_pcm_f32_to_s24(void* pOut, const void* pIn, ma_uint64 count, ma_dither_mode ditherMode);
fn C.ma_pcm_f32_to_s24(p_out voidptr, p_in voidptr, count u64, dither_mode C.ma_dither_mode)
[inline]
pub fn pcm_f32_to_s24(p_out voidptr, p_in voidptr, count u64, dither_mode C.ma_dither_mode) {
	C.ma_pcm_f32_to_s24(p_out, p_in, count, dither_mode)
}

// MA_API void ma_pcm_f32_to_s32(void* pOut, const void* pIn, ma_uint64 count, ma_dither_mode ditherMode);
fn C.ma_pcm_f32_to_s32(p_out voidptr, p_in voidptr, count u64, dither_mode C.ma_dither_mode)
[inline]
pub fn pcm_f32_to_s32(p_out voidptr, p_in voidptr, count u64, dither_mode C.ma_dither_mode) {
	C.ma_pcm_f32_to_s32(p_out, p_in, count, dither_mode)
}

// MA_API void ma_pcm_convert(void* pOut, ma_format formatOut, const void* pIn, ma_format formatIn, ma_uint64 sampleCount, ma_dither_mode ditherMode);
fn C.ma_pcm_convert(p_out voidptr, format_out Format, p_in voidptr, format_in Format, sample_count u64, dither_mode C.ma_dither_mode)
[inline]
pub fn pcm_convert(p_out voidptr, format_out Format, p_in voidptr, format_in Format, sample_count u64, dither_mode C.ma_dither_mode) {
	C.ma_pcm_convert(p_out, format_out, p_in, format_in, sample_count, dither_mode)
}

// MA_API void ma_convert_pcm_frames_format(void* pOut, ma_format formatOut, const void* pIn, ma_format formatIn, ma_uint64 frameCount, ma_uint32 channels, ma_dither_mode ditherMode);
fn C.ma_convert_pcm_frames_format(p_out voidptr, format_out Format, p_in voidptr, format_in Format, frame_count u64, channels u32, dither_mode C.ma_dither_mode)
[inline]
pub fn convert_pcm_frames_format(p_out voidptr, format_out Format, p_in voidptr, format_in Format, frame_count u64, channels u32, dither_mode C.ma_dither_mode) {
	C.ma_convert_pcm_frames_format(p_out, format_out, p_in, format_in, frame_count, channels,
		dither_mode)
}

// MA_API void ma_deinterleave_pcm_frames(ma_format format, ma_uint32 channels, ma_uint64 frameCount, const void* pInterleavedPCMFrames, void** ppDeinterleavedPCMFrames);
fn C.ma_deinterleave_pcm_frames(format Format, channels u32, frame_count u64, p_interleaved_p_c_m_frames voidptr, pp_deinterleaved_p_c_m_frames &voidptr)
[inline]
pub fn deinterleave_pcm_frames(format Format, channels u32, frame_count u64, p_interleaved_p_c_m_frames voidptr, pp_deinterleaved_p_c_m_frames &voidptr) {
	C.ma_deinterleave_pcm_frames(format, channels, frame_count, p_interleaved_p_c_m_frames,
		pp_deinterleaved_p_c_m_frames)
}

// MA_API void ma_interleave_pcm_frames(ma_format format, ma_uint32 channels, ma_uint64 frameCount, const void** ppDeinterleavedPCMFrames, void* pInterleavedPCMFrames);
fn C.ma_interleave_pcm_frames(format Format, channels u32, frame_count u64, pp_deinterleaved_p_c_m_frames &voidptr, p_interleaved_p_c_m_frames voidptr)
[inline]
pub fn interleave_pcm_frames(format Format, channels u32, frame_count u64, pp_deinterleaved_p_c_m_frames &voidptr, p_interleaved_p_c_m_frames voidptr) {
	C.ma_interleave_pcm_frames(format, channels, frame_count, pp_deinterleaved_p_c_m_frames,
		p_interleaved_p_c_m_frames)
}

// MA_API ma_channel ma_channel_map_get_default_channel(ma_uint32 channelCount, ma_uint32 channelIndex);
fn C.ma_channel_map_get_default_channel(channel_count u32, channel_index u32) C.ma_channel
[inline]
pub fn channel_map_get_default_channel(channel_count u32, channel_index u32) C.ma_channel {
	return C.ma_channel_map_get_default_channel(channel_count, channel_index)
}

// MA_API ma_channel ma_channel_map_get_channel(const ma_channel* pChannelMap, ma_uint32 channelCount, ma_uint32 channelIndex);
fn C.ma_channel_map_get_channel(p_channel_map &C.ma_channel, channel_count u32, channel_index u32) C.ma_channel
[inline]
pub fn channel_map_get_channel(p_channel_map &C.ma_channel, channel_count u32, channel_index u32) C.ma_channel {
	return C.ma_channel_map_get_channel(p_channel_map, channel_count, channel_index)
}

// MA_API void ma_channel_map_init_blank(ma_uint32 channels, ma_channel* pChannelMap);
fn C.ma_channel_map_init_blank(channels u32, p_channel_map &C.ma_channel)
[inline]
pub fn channel_map_init_blank(channels u32, p_channel_map &C.ma_channel) {
	C.ma_channel_map_init_blank(channels, p_channel_map)
}

// MA_API void ma_get_standard_channel_map(ma_standard_channel_map standardChannelMap, ma_uint32 channels, ma_channel* pChannelMap);
fn C.ma_get_standard_channel_map(standard_channel_map C.ma_standard_channel_map, channels u32, p_channel_map &C.ma_channel)
[inline]
pub fn get_standard_channel_map(standard_channel_map C.ma_standard_channel_map, channels u32, p_channel_map &C.ma_channel) {
	C.ma_get_standard_channel_map(standard_channel_map, channels, p_channel_map)
}

// MA_API void ma_channel_map_copy(ma_channel* pOut, const ma_channel* pIn, ma_uint32 channels);
fn C.ma_channel_map_copy(p_out &C.ma_channel, p_in &C.ma_channel, channels u32)
[inline]
pub fn channel_map_copy(p_out &C.ma_channel, p_in &C.ma_channel, channels u32) {
	C.ma_channel_map_copy(p_out, p_in, channels)
}

// MA_API void ma_channel_map_copy_or_default(ma_channel* pOut, const ma_channel* pIn, ma_uint32 channels);
fn C.ma_channel_map_copy_or_default(p_out &C.ma_channel, p_in &C.ma_channel, channels u32)
[inline]
pub fn channel_map_copy_or_default(p_out &C.ma_channel, p_in &C.ma_channel, channels u32) {
	C.ma_channel_map_copy_or_default(p_out, p_in, channels)
}

// MA_API ma_bool32 ma_channel_map_valid(ma_uint32 channels, const ma_channel* pChannelMap);
fn C.ma_channel_map_valid(channels u32, p_channel_map &C.ma_channel) bool
[inline]
pub fn channel_map_valid(channels u32, p_channel_map &C.ma_channel) bool {
	return C.ma_channel_map_valid(channels, p_channel_map)
}

// MA_API ma_bool32 ma_channel_map_equal(ma_uint32 channels, const ma_channel* pChannelMapA, const ma_channel* pChannelMapB);
fn C.ma_channel_map_equal(channels u32, p_channel_map_a &C.ma_channel, p_channel_map_b &C.ma_channel) bool
[inline]
pub fn channel_map_equal(channels u32, p_channel_map_a &C.ma_channel, p_channel_map_b &C.ma_channel) bool {
	return C.ma_channel_map_equal(channels, p_channel_map_a, p_channel_map_b)
}

// MA_API ma_bool32 ma_channel_map_blank(ma_uint32 channels, const ma_channel* pChannelMap);
fn C.ma_channel_map_blank(channels u32, p_channel_map &C.ma_channel) bool
[inline]
pub fn channel_map_blank(channels u32, p_channel_map &C.ma_channel) bool {
	return C.ma_channel_map_blank(channels, p_channel_map)
}

// MA_API ma_bool32 ma_channel_map_contains_channel_position(ma_uint32 channels, const ma_channel* pChannelMap, ma_channel channelPosition);
fn C.ma_channel_map_contains_channel_position(channels u32, p_channel_map &C.ma_channel, channel_position C.ma_channel) bool
[inline]
pub fn channel_map_contains_channel_position(channels u32, p_channel_map &C.ma_channel, channel_position C.ma_channel) bool {
	return C.ma_channel_map_contains_channel_position(channels, p_channel_map, channel_position)
}

// MA_API ma_uint64 ma_convert_frames(void* pOut, ma_uint64 frameCountOut, ma_format formatOut, ma_uint32 channelsOut, ma_uint32 sampleRateOut, const void* pIn, ma_uint64 frameCountIn, ma_format formatIn, ma_uint32 channelsIn, ma_uint32 sampleRateIn);
fn C.ma_convert_frames(p_out voidptr, frame_count_out u64, format_out Format, channels_out u32, sample_rate_out u32, p_in voidptr, frame_count_in u64, format_in Format, channels_in u32, sample_rate_in u32) u64
[inline]
pub fn convert_frames(p_out voidptr, frame_count_out u64, format_out Format, channels_out u32, sample_rate_out u32, p_in voidptr, frame_count_in u64, format_in Format, channels_in u32, sample_rate_in u32) u64 {
	return C.ma_convert_frames(p_out, frame_count_out, format_out, channels_out, sample_rate_out,
		p_in, frame_count_in, format_in, channels_in, sample_rate_in)
}

// MA_API ma_uint64 ma_convert_frames_ex(void* pOut, ma_uint64 frameCountOut, const void* pIn, ma_uint64 frameCountIn, const ma_data_converter_config* pConfig);
fn C.ma_convert_frames_ex(p_out voidptr, frame_count_out u64, p_in voidptr, frame_count_in u64, p_config &C.ma_data_converter_config) u64
[inline]
pub fn convert_frames_ex(p_out voidptr, frame_count_out u64, p_in voidptr, frame_count_in u64, p_config &C.ma_data_converter_config) u64 {
	return C.ma_convert_frames_ex(p_out, frame_count_out, p_in, frame_count_in, p_config)
}

// MA_API ma_result ma_rb_init_ex(size_t subbufferSizeInBytes, size_t subbufferCount, size_t subbufferStrideInBytes, void* pOptionalPreallocatedBuffer, const ma_allocation_callbacks* pAllocationCallbacks, ma_rb* pRB);
fn C.ma_rb_init_ex(subbuffer_size_in_bytes usize, subbuffer_count usize, subbuffer_stride_in_bytes usize, p_optional_preallocated_buffer voidptr, p_allocation_callbacks &C.ma_allocation_callbacks, p_r_b &C.ma_rb) Result
[inline]
pub fn rb_init_ex(subbuffer_size_in_bytes usize, subbuffer_count usize, subbuffer_stride_in_bytes usize, p_optional_preallocated_buffer voidptr, p_allocation_callbacks &C.ma_allocation_callbacks, p_r_b &C.ma_rb) Result {
	return C.ma_rb_init_ex(subbuffer_size_in_bytes, subbuffer_count, subbuffer_stride_in_bytes,
		p_optional_preallocated_buffer, p_allocation_callbacks, p_r_b)
}

// MA_API ma_result ma_rb_init(size_t bufferSizeInBytes, void* pOptionalPreallocatedBuffer, const ma_allocation_callbacks* pAllocationCallbacks, ma_rb* pRB);
fn C.ma_rb_init(buffer_size_in_bytes usize, p_optional_preallocated_buffer voidptr, p_allocation_callbacks &C.ma_allocation_callbacks, p_r_b &C.ma_rb) Result
[inline]
pub fn rb_init(buffer_size_in_bytes usize, p_optional_preallocated_buffer voidptr, p_allocation_callbacks &C.ma_allocation_callbacks, p_r_b &C.ma_rb) Result {
	return C.ma_rb_init(buffer_size_in_bytes, p_optional_preallocated_buffer, p_allocation_callbacks,
		p_r_b)
}

// MA_API void ma_rb_uninit(ma_rb* pRB);
fn C.ma_rb_uninit(p_r_b &C.ma_rb)
[inline]
pub fn rb_uninit(p_r_b &C.ma_rb) {
	C.ma_rb_uninit(p_r_b)
}
